move index to root

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 
         <ul class="list">
           <li>
-            <a class="nav" href="./studio/index.html">Studio</a>
+            <a class="nav" href="./index.html">Studio</a>
           </li>
           <li><a class="nav" href="./portfolio.html">Portfolio</a></li>
           <li><a class="nav" href="">Contacts</a></li>
