--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li>
             <a class="nav" href="./index.html">Studio</a>
           </li>
-          <li><a class="nav" href="../portfolio.html">Portfolio</a></li>
+          <li><a class="nav" href="./portfolio.html">Portfolio</a></li>
           <li><a class="nav" href="">Contacts</a></li>
         </ul>
       </nav>
@@ -98,19 +98,19 @@
         <ul class="list">
           <li>
             <a href=""
-              ><img src="./images/img1.jpg" alt="computer" width="360"
+              ><img src="./images/imag1.jpg" alt="computer" width="360"
             /></a>
           </li>
 
           <li>
             <a href=""
-              ><img src="./images/img2.jpg" alt="computer" width="360"
+              ><img src="./images/imag2.jpg" alt="computer" width="360"
             /></a>
           </li>
 
           <li>
             <a href=""
-              ><img src="./images/img3.jpg" alt="computer" width="360"
+              ><img src="./images/imag3.jpg" alt="computer" width="360"
             /></a>
           </li>
         </ul>
