--- a/portfolio.html
+++ b/portfolio.html
@@ -42,76 +42,78 @@
       </ul>
     </header>
 
-    <main>
-      <!--Портфоліо-->
-      <!-- <h1>Portfolio</h1> -->
+    <section>
+      <main>
+        <!--Портфоліо-->
+        <!-- <h1>Portfolio</h1> -->
 
-      <!--Фільтр-->
-      <ul class="list">
-        <li><button class="button" type="button">All</button></li>
-        <li><button class="button" type="button">Web Site</button></li>
-        <li><button class="button" type="button">App</button></li>
-        <li><button class="button" type="button">Design</button></li>
-        <li><button class="button" type="button">Marketing</button></li>
-      </ul>
+        <!--Фільтр-->
+        <ul class="list">
+          <li><button class="button" type="button">All</button></li>
+          <li><button class="button" type="button">Web Site</button></li>
+          <li><button class="button" type="button">App</button></li>
+          <li><button class="button" type="button">Design</button></li>
+          <li><button class="button" type="button">Marketing</button></li>
+        </ul>
 
-      <!-- Меню-->
-      <ul class="list">
-        <li>
-          <img src="./images/img1.jpg" alt="App" width="360" />
-          <h3 class="list-type">Banking App Interface Concept</h3>
-          <p>App</p>
-        </li>
+        <!-- Меню-->
+        <ul class="list">
+          <li>
+            <img src="./images/img1.jpg" alt="App" width="360" />
+            <h2 class="list-type">Banking App Interface Concept</h2>
+            <p>App</p>
+          </li>
 
-        <li>
-          <img src="./images/img2.jpg" alt="App" width="360" />
-          <h3 class="list-type">Cashless Payment</h3>
-          <p>Marketing</p>
-        </li>
+          <li>
+            <img src="./images/img2.jpg" alt="App" width="360" />
+            <h2 class="list-type">Cashless Payment</h2>
+            <p>Marketing</p>
+          </li>
 
-        <li>
-          <img src="./images/img3.jpg" alt="App" width="360" />
-          <h3 class="list-type">Meditaion App</h3>
-          <p>App</p>
-        </li>
+          <li>
+            <img src="./images/img3.jpg" alt="App" width="360" />
+            <h2 class="list-type">Meditaion App</h2>
+            <p>App</p>
+          </li>
 
-        <li>
-          <img src="./images/img4.jpg" alt="App" width="360" />
-          <h3 class="list-type">Taxi Service</h3>
-          <p>Marketing</p>
-        </li>
+          <li>
+            <img src="./images/img4.jpg" alt="App" width="360" />
+            <h2 class="list-type">Taxi Service</h2>
+            <p>Marketing</p>
+          </li>
 
-        <li>
-          <img src="./images/img5.jpg" alt="App" width="360" />
-          <h3 class="list-type">Screen Illustrations</h3>
-          <p>Design</p>
-        </li>
+          <li>
+            <img src="./images/img5.jpg" alt="App" width="360" />
+            <h2 class="list-type">Screen Illustrations</h2>
+            <p>Design</p>
+          </li>
 
-        <li>
-          <img src="./images/img6.jpg" alt="App" width="360" />
-          <h3 class="list-type">Online Courses</h3>
-          <p>Marketing</p>
-        </li>
+          <li>
+            <img src="./images/img6.jpg" alt="App" width="360" />
+            <h2 class="list-type">Online Courses</h2>
+            <p>Marketing</p>
+          </li>
 
-        <li>
-          <img src="./images/img7.jpg" alt="App" width="360" />
-          <h3 class="list-type">Instagram Stories Concept</h3>
-          <p>Design</p>
-        </li>
+          <li>
+            <img src="./images/img7.jpg" alt="App" width="360" />
+            <h2 class="list-type">Instagram Stories Concept</h2>
+            <p>Design</p>
+          </li>
 
-        <li>
-          <img src="./images/img8.jpg" alt="App" width="360" />
-          <h3 class="list-type">Organic Food</h3>
-          <p>Web Site</p>
-        </li>
+          <li>
+            <img src="./images/img8.jpg" alt="App" width="360" />
+            <h2 class="list-type">Organic Food</h2>
+            <p>Web Site</p>
+          </li>
 
-        <li>
-          <img src="./images/img9.jpg" alt="App" width="360" />
-          <h3 class="list-type">Fresh Coffee</h3>
-          <p>Web Site</p>
-        </li>
-      </ul>
-    </main>
+          <li>
+            <img src="./images/img9.jpg" alt="App" width="360" />
+            <h2 class="list-type">Fresh Coffee</h2>
+            <p>Web Site</p>
+          </li>
+        </ul>
+      </main>
+    </section>
 
     <!-- Футер -->
     <footer class="footer">
@@ -121,7 +123,7 @@
         ></a
       >
 
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and <br />
         sales for your business with digital <br />
         marketing & growth solutions.
